[Home]

Summary:ASTERISK-25162: func_pjsip_aor: Leak of contact in iterator
Reporter:Corey Farrell (coreyfarrell)Labels:
Date Opened:2015-06-15 16:37:04Date Closed:2015-06-15 17:29:15
Priority:MinorRegression?
Status:Closed/CompleteComponents:
Versions:SVN 13.3.2 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:pjsip_aor_function_read leaks the contact references retreived from the iterator.
Comments: