func_pjsip_aor: Fix leaked contact from iterator.

ASTERISK-25162 #close

Change-Id: Id79aa3c6fe490016ee98efc97ac4c1d3f461f97e